# DELETE-THIS-mail-headers

./: .travis.yml  Cargo.toml  README.md
src/: convert.rs  error.rs  header.rs  header_impl.rs  header_macro.rs  headers.rs  lib.rs  macros.rs  name.rs
src/components/: cfws.rs  date_time.rs  disposition.rs  email.rs  mailbox.rs  mailbox_list.rs  media_type.rs  message_id.rs  mod.rs  path.rs  phrase.rs  phrase_list.rs  raw_unstructured.rs  received_token.rs  transfer_encoding.rs  unstructured.rs  word.rs
src/components/utils/: text_partition.rs
src/data/: inner_item.rs  input.rs  simple_item.rs
src/header_components/: cfws.rs  date_time.rs  disposition.rs  email.rs  file_meta.rs  mailbox.rs  mailbox_list.rs  media_type.rs  message_id.rs  mod.rs  phrase.rs  phrase_list.rs  transfer_encoding.rs
src/header_components/utils/: mod.rs  text_partition.rs
src/headers/: mod.rs
src/map/: into_iter.rs  mod.rs
