[package]
name = "mail-headers"
version = "0.0.1"
authors = ["Philipp Korber <philippkorber@gmail.com>"]
description = "TODO"
documentation = "https://docs.rs/mail-headers"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/mail-codec"

[dependencies]
nom = "3.1.0"
quick-error = "1.2.1"
soft-ascii-string = "0.2"
quoted-string = { git="https://github.com/1aim/quoted-string", version="0.5" }
mail-common = { git="https://github.com/1aim/mail-common" }
vec1 = { git="https://github.com/1aim/vec1" }
chrono = "0.4.0"

[dependencies.mime]
git="https://github.com/1aim/mime"
branch="parser_revamp"
features=["expose-param-utils"]
version="0.4.0"



[dev-dependencies]


[features]
traceing = [ "mail-common/traceing" ]
