[package]
name = "mail-headers"
description = "[internal/mail-api] header parts for the mail-api crate (inkl. header map and standard header impl)"
version = "0.2.0"
authors = ["Philipp Korber <philippkorber@gmail.com>"]
documentation = "https://docs.rs/mail-headers"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/mail-headers"

[dependencies]
failure = "0.1.1"
owning_ref = "0.3.3"
serde = "1.0.38"
serde_derive = "1.0.38"
nom = "3.1.0"
soft-ascii-string = "1.0"
quoted-string = { git="https://github.com/1aim/quoted-string", version="0.5" }
mail-common = { git="https://github.com/1aim/mail-common" }
vec1 = "1.0"
chrono = "0.4.0"
total-order-multi-map = { git="https://github.com/1aim/total-order-multi-map" }

[dependencies.mime]
git="https://github.com/1aim/mime"
branch="parser_revamp"
features=["expose-param-utils"]
version="0.4.0"



[dev-dependencies]


[features]
traceing = [ "mail-common/traceing" ]
