[package]
name = "mail-headers"
description = "[internal/mail-api] header parts for the mail-api crate (inkl. header map and standard header impl)"
version = "0.5.0-wip"
authors = ["Philipp Korber <philippkorber@gmail.com>"]
documentation = "https://docs.rs/mail-headers"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/mail-headers"

[dependencies]
failure = "0.1"
owning_ref = "0.4"
serde = "1"
serde_derive = "1"
nom = "3.1.0"
soft-ascii-string = "1"
quoted-string = "0.6"
mail-common = { git="https://github.com/1aim/mail-common" }
vec1 = "1"
chrono = "0.4"
total-order-multi-map = "0.4.3"

[dependencies.mime]
git="https://github.com/1aim/mime"
branch="parser_revamp"
features=["expose-param-utils"]
version="0.4.0"



[dev-dependencies]


[features]
traceing = [ "mail-common/traceing" ]
